Bug 516128 - Splitter broken when the panels are vertically aligned

--- a/bundles/org.eclipse.orion.client.ui/web/css/lightPage.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/lightPage.css
@@ -55,7 +55,6 @@
 
 .lightPage .split {
 	background: #c4c5c8;
-	width: 4px;
 }
 
 .lightPage .splitThumb {
